# SDCT

SDCT-Cryptocurrency/: CMakeLists.txt  README_en.md
SDCT-Cryptocurrency/depends/bulletproofs/: aggregate_bulletproof.hpp  innerproduct_proof.hpp
SDCT-Cryptocurrency/depends/common/: global.hpp  hash.hpp  print.hpp  routines.hpp
SDCT-Cryptocurrency/depends/nizk/: nizk_dlog_equality.hpp  nizk_plaintext_equality.hpp  nizk_plaintext_knowledge.hpp
SDCT-Cryptocurrency/depends/sm/: sm3hash.hpp
SDCT-Cryptocurrency/depends/twisted_elgamal/: calculate_dlog.hpp  twisted_elgamal.hpp
SDCT-Cryptocurrency/src/: SDCT.hpp
SDCT-Cryptocurrency/test/: test_nizk_plaintext_equality.cpp  test_sdct.cpp  test_twisted_elgamal.cpp
SDCT-Service/: README.md  generator.go  generator_test.go  go.mod  go.sum
SDCT-Service/client/: client.go
SDCT-Service/cmd/: main.go
SDCT-Service/contracts/sdctsetup/: sdctsetup.go
SDCT-Service/curve/: bn128.go  bn128_test.go  curve.go
SDCT-Service/deployer/: deployer.go
SDCT-Service/proof/: aggrangeproof.go  aggrangeproof_test.go  calculate_dlog.go  calculate_dlog_test.go  ct_valid.go  ct_valid_test.go  elgamal_ct.go  elgamal_ct_test.go  inner_product.go  inner_product_test.go  nizk_plaintext_equality.go  nizk_plaintext_equality_test.go  sigma_protocol.go  sigma_protocol_test.go
SDCT-Service/sdctsys/: account.go  sdctsys.go  sdctsys_test.go  sdctsyssolidity_test.go
SDCT-Service/solidity/: truffle.js
SDCT-Service/utils/: common.go  common_test.go  ecpoint.go  field_vector.go  file.go  generator_vector.go
(+6 files in other folders)
